--- a/src/main/resources/lang/ukr/nukkit.yml
+++ b/src/main/resources/lang/ukr/nukkit.yml
@@ -9,7 +9,7 @@
 
 settings:
  #Налаштування мови
- #Доступні: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu
+ #Доступні: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu, ltu
  language: "ukr"
  #Вибір пристрою для обробки перекладу (true — сервер буде оброблювати переклад)
  force-language: false
