--- a/src/main/resources/lang/bra/nukkit.yml
+++ b/src/main/resources/lang/bra/nukkit.yml
@@ -4,7 +4,7 @@
 
 settings:
  #Configuração de Multi-Linguagem
- #Disponível: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr ,deu
+ #Disponível: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu, ltu
  language: "bra"
  #Se é para enviar todos os textos traduzidos para a linguagem do servidor ou se é para o próprio dispositivo traduzir elas
  force-language: false
