--- a/src/main/resources/lang/deu/nukkit.yml
+++ b/src/main/resources/lang/deu/nukkit.yml
@@ -4,7 +4,7 @@
 
 settings:
  #Multilingual
- #Verfügbar: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu
+ #Verfügbar: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu, ltu
  language: "deu"
  #Sollen alle Nachrichten in Serversprache ausgegeben werden oder sollen Sie vom Client verarbeitet werden
  force-language: false
