--- a/src/main/resources/lang/pol/nukkit.yml
+++ b/src/main/resources/lang/pol/nukkit.yml
@@ -4,7 +4,7 @@
 
 settings:
  #Ustawienia wielojezykowe
- #Dostepne: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu
+ #Dostepne: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu, ltu
  language: "pol"
  #Wyslac wiadomosci w jezyku serwera czy pozwolic urzadzeniu wybrac
  force-language: false
