--- a/src/main/resources/lang/rus/nukkit.yml
+++ b/src/main/resources/lang/rus/nukkit.yml
@@ -9,7 +9,7 @@
 
 settings:
  #Выбор языка.
- #Доступные языки: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu
+ #Доступные языки: eng, chs, cht, jpn, rus, spa, pol, bra, kor, ukr, deu, ltu
  language: "rus"
  #true для отправки переведённых строк на сервер, или false - возложить перевод на устройство
  force-language: false
