--- a/src/main/resources/lang/bra/lang.ini
+++ b/src/main/resources/lang/bra/lang.ini
@@ -1,4 +1,4 @@
-﻿# Arquivo de linguagem compatível com os identificadores do Minecraft: Pocket Edition
+# Arquivo de linguagem compatível com os identificadores do Minecraft: Pocket Edition
 #
 # A mensagem não precisa estar aqui para ser mostrada corretamente no cliente.
 # Somente as mensagens mostradas no Nukkit devem estar aqui
