--- a/src/main/resources/lang/ukr/lang.ini
+++ b/src/main/resources/lang/ukr/lang.ini
@@ -1,4 +1,4 @@
-﻿# Файл перекладу сумістний з Minecraft: Pocket Edition на рівні ідентифікаторів
+# Файл перекладу сумістний з Minecraft: Pocket Edition на рівні ідентифікаторів
 #
 # Це повідомлення необов'язково повинно бути тут, щоб працювати у клієнті
 # Тут тільки повідомлення з самого Nukkit
